	swith statements where last case was not correctly linked to the switch end
	block. Added a few more block optimizations (double jumps, double rets of
	the same type, double aborts). Fixed crash on empty functions. End-function
	return is only added if there isn't one already.
	*** UCC: Fixed bug when a block is empty but is target of conditional jumps.

2008-02-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	UCC: Removing old way of handling labels. Improved dead-block detection.
	Fixed bug in IF statements without a corresponding ELSE statement. Fixed
	a few leaks. Eliminated premature while(0) and if (0) optimizations since
	a GOTO statement may point to somewhere inside these otherwise unreachable
	blocks.

2008-02-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Exult: Removing 32-bit match check for init_loop opcode.
	* UCC: Fixed the use of declared constants for function IDs/shapes.
	  Added several contant-expression optimizations, particularly for while
	  and do...while loops. Added 32-bit-detectino routine which works correctly
	  considering signed 16-bit bounds. Also, allowing 'continue' statements on
	  'for' and 'converse' loops as well as disallowing 'break' statements
	  except for loops and switches. Finally, modified code generation to use
	  basic blocks instead; this allows for some small code optimizations to be
	  performed (e.g., 'if (cond) break; else statements' having only one jump
	  instead of 3) as well as finally being able to use 32-bit jumps with UCC.

2008-02-03    <jeff@mini.nerble.net>

	* actors.cc: Fixed bug where companions would walk on water.

2008-01-27    <jeff@mini.nerble.net>

	* schedule.cc, actions.cc, actions.h: Made the 'talk' schedule
	more aggressive, so it's harder for the Avatar to get away.

2008-01-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
	"Fixed" operator precedence rules for UCC to be more like those of C/C++.
	Making UCC emit bytes for script opcodes as the originals do; UCC is